DDF-3327 Fix description overflow in Admin UI Application boxes (#2392)

--- a/platform/admin/ui/src/main/webapp/less/application/app-card.less
+++ b/platform/admin/ui/src/main/webapp/less/application/app-card.less
@@ -25,6 +25,10 @@
   .panel-body {
     padding: 0px @app-card-overlay-width 0px 0px; // reset bootstrap
     height: 100%;
+    display: -ms-flexbox;
+    -ms-flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   .name {
@@ -33,6 +37,7 @@
   }
 
   .description {
+    -ms-flex: 1;
     height: 150px;
     .divider {
       margin: 1px 0px;
